Proofread chapters 1 and 2

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -20,9 +20,11 @@
 \setCJKsansfont{Source Han Sans TW}
 \setCJKmonofont{Source Han Sans TW}
 \newfontfamily\pyfont{Adobe Text Pro}
+\newfontfamily\ipafont[Scale=0.95]{Doulos SIL}
 \newcommand{\toponim}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\nazwisko}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\pinyin}[1]{\nohyphens{\pyfont\itshape #1}}
+\newcommand{\ipa}[1]{{\ipafont #1}}
 \newcommand{\defspacing}{\spacing{1.65}}
 \newcommand{\quotespacing}{\spacing{1.1}}
 \let\fnm=\footnotemark
@@ -47,3 +49,5 @@
 \titlespacing{\chapter}{0pt}{0.5em}{0.5em}
 
 \hyphenation{Mil-kow-szczy-zna Biały-stok Меж-ду-на-род-ный}
+
+\newcommand{\noteonrussian}{\footnote{All Russian terms in the thesis are rendered in original Cyryllic script and transliterated according to the BGN/PCGN romanization system for Russian. Unless noted otherwise, all terms are listed in their pre-reform spelling, the standard form before the October Revolution of 1917.}}
