--- a/esperanto.tex
+++ b/esperanto.tex
@@ -1,26 +1,28 @@
 \chapter{The Esperanto movement}
 
-Esperanto (Chinese: 世界語 \pinyin{Shìjièyǔ}, lit. `world language') is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859-1917), a Jewish ophthalmologist from Białystok.
-This chapter describes the language, the life story of its creator, the development of the Esperanto movement, and the state of the Esperanto movement to date.
+Esperanto (Chinese: 世界語 \pinyin{Shìjièyǔ}, lit. `world language') is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859--1917), a Jewish ophthalmologist from the city of Białystok (Polish pronunciation: \ipa{[bjaˈwɨstɔk]}).
+This chapter describes the origins of the language, the life story of its creator, the development of the Esperanto movement, and the state of the Esperanto movement to date.
 
 \section{The life of Ludwik Lejzer Zamenhof}
-Ludwik Lejzer Zamenhof was born on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland).
+Ludwik Lejzer Zamenhof was born Leyzer Zamengov (Лейзеръ Заменгов\noteonrussian{}) on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland).
 At the time, the city was ethnically and linguistically diverse, and was inhabited by Jews, Russians, Poles, and Germans.
 Each and all of these nations spoke their own language.
-The Jewish population spoke Yiddish, a peculiar amalgam of High German mixed with Hebrew, Aramaic, and Slavic languages. Polish was the language of intelligentsia, Belarussian---the language used in the streets, German---the language of business, and Russian---the official language in the area.
-In Białystok, it was not uncommon to speak and understand all of the languages that were used in the city, but young Ludwik had admittedly attained a high degree of familiarity with all of these languages at the age of five.
+The Jewish majority spoke Yiddish, a peculiar amalgam of High German mixed with Hebrew, Aramaic, and Slavic languages.
+Polish was the language of intelligentsia, Belarussian---the language used in the streets, German---the language of business, and Russian---the official language in the area.
+In Białystok, it was not uncommon to speak and understand all of these languages, but young Ludwik had admittedly attained a high degree of familiarity with all of these languages at the age of five.
 Having been raised as an idealist, in the belief that all men were brothers, young Ludwik had soon noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
-Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904, Ziółkowska 2008: 3).
+Ever since his early childhood, he had had a vision of a single language that could unite all nations
+(Zamenhof 1904, Ziółkowska 2008: 3).
 
 The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood.
 As a young boy, he had dreamt of becoming a great Russian poet, and at the age of ten, he wrote a five-act tragedy in Russian.
-Between 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
-In 1873, he moved with his parents to Warsaw, where he studied Latin and Ancient Greek, and then enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
+In 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
+In 1873 he moved with his parents to Warsaw (Polish: Warszawa \ipa{[varˈʂava]}, present-day capital of Poland), where he studied Latin and Ancient Greek, after which he enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
 He graduated in 1879 and moved to Moscow to attend the faculty of medicine.
 In 1881, due to the poor financial situation of his family, he was compelled to move back to Warsaw, where he obtained his medical degree in 1885.
 After a period of medical practice he realized that he was too sympathetic for his patients, that their suffering and death affected him too much.
 This was the reason he became a specialist in ophthalmology, a relatively peaceful branch of medicine.
-This was also the time when he adopted his pseudonym, \textit{Doktoro Esperanto}, ``Doctor Hopeful''.
+This was also the time when he adopted his pseudonym, \textit{Doktoro Esperanto}, ``Doctor Hopeful.''
 In his constructed language, \textit{Esperanto} signified `the one who hopes,'
 the suffix \textit{-anto} indicating the gerund form, analogous to such Latin words as \textit{memorandum} or the ``verb + \textit{-ing}'' form in English
 (Kökény and Bleier 1933: 1048).
@@ -28,9 +30,9 @@ the suffix \textit{-anto} indicating the gerund form, analogous to such Latin wo
 \section{First appearance of Esperanto}
 The language authored by Zamenhof was first described in a book published in the Russian language in 1887 in Warsaw.
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
-(Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ%
-\footnote{All Russian terms in the thesis are rendered in original Cyryllic script and transliterated according to the BGN/PCGN romanization system for Russian.} `The International Language. Introduction and Complete Textbook').
-This book has subsequently been translated into English as \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar}, as well as Polish, German, and French.
+(Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ `The International Language. Introduction and Complete Textbook').
+This book has subsequently been translated into English, %and published as \textit{Dr.~Esperanto's International Language, Introduction and Complete Grammar}
+Polish, German, and French.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language.
@@ -41,12 +43,12 @@ He argued that if the humanity had to only learn two languages, their own native
 Zamenhof was by no means the first man to construct an auxilliary language with the hope of unifying the human race.
 Many similar endeavors had been undertaken before, with the most prominent example being Volapük, designed by a Catholic priest from Germany by the name Johann Martin Schleyer.
 None of those constructed languages had gained any significant international attention or had succeeded in becoming a generally accepted \textit{lingua franca}.
-Their failure, Zamenhof argued, had been due to their failure to meet three crucial conditions:
+Their failure, according to Zamenhof (2006), had been due to their failure to meet three crucial conditions:
 
 \begin{enumerate}
   \item that the language be easy to learn, so as to make its acquisition a ``mere play to the learner,''
   \item designating the language as a means of international communication rather than a ``universal'' language, and enabling the learner to make direct use of his knowledge of the language with persons of any nationality,
-  \item convincing indifferent people around the world to learn the proposed international language (Zamenhof 2006).
+  \item convincing indifferent people around the world to learn the proposed international language.
 \end{enumerate}
 
 Schleyer had made all efforts to make his language as comprehensive and precise as possible.
@@ -59,31 +61,64 @@ It is said that even Schleyer himself could not express his thoughts clearly in 
 (Kökény and Bleier 1933: 1012).
 
 By contrast, Zamenhof's approach to language design was brilliantly simple: the first book included only 16 grammar rules, which have been left intact ever since, and a vocabulary of just 917 stems.
-His vocabulary of Esperanto was mostly based on Latin and Western European languages, mainly French and German.
-Zamenhof avoided adding too detailed explanations in the belief that the language would eventually develop on its own
-(Kökény and Bleier 1933: 1053-1054).
+He avoided adding too detailed explanations in the belief that the language would eventually develop on its own.
+The initial vocabulary of Esperanto was mostly based on Latin and Western European languages, mainly French and German.
+All parts of speech are perfectly regular, with ingeniously simple conjugations and declensions.
+For instance, the verb ``to be'' is \textit{esti} in its dictionary, infinitive form.
+The present tense for all persons is \textit{estas}, the past tense---\textit{estis}, the future tense---\textit{estos}, and the conditional form---\textit{estus}.
+Unlike in the case of ethnic languages in which mastering the verb system under normal conditions could take weeks (conditionals in German), all necessary rules of Esperanto can be described in two sentences.
+All verbs in the languague follow the same pattern.
+There are only two cases, nominative and accusative, which is just enough to tell the subject of a sentence from the object.
+The accusative is indicated by the suffix \textit{-n}.
+For example, in the sentence \textit{Li loĝas en granda domo.} (`He lives in a big house.'), \textit{granda domo} (a big house) is used in nominative.
+By comparison, in the sentence \textit{Mi volus aĉeti novan aŭtomobilon.} (`I would like to buy a new car.'), \textit{novan aŭtomobilon} (a new car) is used in the accusative case, and the \textit{-n} suffix is appended to both the object and the adjective describing it
+(Kökény and Bleier 1933: 1053--1054).
+
+% One could describe Zamenhof's invention as ``perfect in its simplicity.''
 
 \section{Early development of Esperanto}
 
-In the early stages of the development of Esperanto, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
+In the early stages of the development of Esperanto, the language had no name of its own other than ``international language'' (Esperanto: \textit{lingvo internacia}).
 The speakers of the new language soon decided to baptize the language with a part of Zamenhof's pseudonym, \textit{Doktoro Esperanto}.
-A person who learns and speaks Esperanto is referred to as an \textit{Esperantist} (Esperanto: \textit{Esperantisto}, from \textit{Esperanto} + \textit{-isto}, suffix indicating a person who does something over a longer period of time, analogous to \textit{-ist} in European languages).
+A person who learns and speaks Esperanto is referred to as an \textit{Esperantist} (Esperanto: \textit{Esperantisto}%, from \textit{Esperanto} + \textit{-isto}, suffix indicating a person who does something over a longer period of time, analogous to \textit{-ist} in European languages
+) or \textit{samideano} (from \textit{sama} `same' + \textit{ideo} `idea' + \textit{ano} `member').
 
 After a period of natural development of the language, in 1905, Zamenhof compiled another work called \textit{Fundamento de Esperanto} (English: \textit{Foundation of Esperanto}), in which he included a more detailed grammar, exercises, and an extended set of vocabulary, in five national languages: French, English, German, Russian, and Polish.
-(Kökény and Bleier 1933: 1053-1054).
+(Kökény and Bleier 1933: 1053--1054).
 
 The first World Esperanto Congress was held in August, 1905, in Boulogne-sur-Mer, France.
 688 people of different nationalities attended the event, which was held entirely in Esperanto.
 During the congress, the \textit{Declaration on the Essence of Esperantism} (Esperanto: \textit{Deklaracio pri la esenco de la esperantismo}) was ratified, which designated the book \textit{Foundation of Esperanto} as the only obligatory authority over the language%
 \footnote{From the website of the 100th World Esperanto Congress in Lille, France. Retrieved March 25th, 2020, from \url{http://www.lve-esperanto.org/lille2015/eo/memoro/index.htm}.}.
 
+\section{Esperanto as a language of translation} \label{esperanto_translations}
+Translations have been an important part of the Esperanto movement ever from its early beginnings.
+Zamenhof's first translation into Esperanto was \textit{The Battle of Life: A Love Story} by Charles Dickens (Esperanto: \textit{La Batalo de l' Vivo}), which had not been published in book form until 1910.
+His next translation was Shakespeare's \textit{Hamlet}, published in Esperanto under the title \textit{Hamleto. Reĝido de Danujo} (`Hamlet. Prince of Denmark').
+Both translations were indirect translations from German-language editions
+(Kökény and Bleier 1933: 1054).
+
+% The first published book written directly in Esperanto was Zamenhof's \textit{Foundation of Esperanto}.
+According to Benczik (1979), Esperanto is regarded by most of its users as a good language for translation.
+Firstly, unlike in the case of national languages, where native speakers of the language have an obvious advantage over L2 speakers, Esperanto is from the outset designed to be used as an L2 language.
+This implies that anyone can translate from his or her own native language into Esperanto, which minimizes the risk of any misinterpretation of the source text.
+Secondly, Esperanto is very flexible; unlike national languages, its expressions are not constrained by a centuries-long language history.
+Lastly, it is theoretically possible that Esperanto could become popular in the whole world, it is therefore sufficient to translate a work into Esperanto, a language that can by understood by a person of any nationality.
+Indirect translation of texts originally written in another national language into another national language is particularly common in Asia.
+
+In the case of ethnic languages, a substantial part, if not the majority, of all translated texts are not meant for publication, but are translations of letters, articles, documents or other texts for internal use by organizations or governments.
+However, due to the fact that no country uses Esperanto as its official language, there is no need for such translations, and the vast majority of translations from ethnic languages or vice versa are intended for publishing in print other media.
+Benczik's article (1979) predated the invention of the World Wide Web by more than a decade.
+Nowadays, it is conceivable that many translations from or into Esperanto end up being published on websites or as e-books.
+
 \section{Esperanto in China}
-According to Boltinsky (2016), the most famous proponent of Esperanto in China had been the writer and poet Lu Xun (魯迅 \nazwisko{Lǔ xùn}, 1881-1936), an important figure in the May Fourth Movement (五四運動 \pinyin{Wǔ sì yùndòng}) that advocated the transition from literary to vernacular Chinese.
+According to Boltinsky (2016), the most famous proponent of Esperanto in China had been the writer and poet Lu Xun (魯迅 \nazwisko{Lǔ xùn}, 1881--1936).
+Lu Xun had also been an important figure in the May Fourth Movement (五四運動 \pinyin{Wǔ sì yùndòng}) that advocated the transition from literary to vernacular Chinese.
 
 Liu (2016) names two periods in Chinese history during which Esperanto had enjoyed relative popularity.
-The first period had been between 1912-1936, that is, roughly between the establishment of the Republic of China and the escalation of the Second Sino-Japanese War (抗日戰爭 \pinyin{kàngrì zhànzhēng}) to the whole of China.
-During that period, Esperanto enjoyed support of many Chinese intellectuals, including the president of Peking University (北京大學 \pinyin{Běijīng Dàxué}), Cai Yuanpei (蔡元培 \nazwisko{Cài Yuánpéi}, 1868-1940).
-Another period of relative popularity followed the ``reform and opening up'' (改革開放 \pinyin{gǎigé kāifàng}) program of Deng Xiaoping (鄧小平 \nazwisko{Dèng Xiǎopíng}, 1904-1997), and occurred roughly between 1981-2005.
+The first period had been between 1912--1936, that is, roughly between the establishment of the Republic of China and the escalation of the Second Sino-Japanese War (抗日戰爭 \pinyin{kàngrì zhànzhēng}, lit. `war of resistance against Japan') to the whole of China.
+During that period, Esperanto enjoyed the support of many Chinese intellectuals, including the president of Peking University (北京大學 \pinyin{Běijīng Dàxué}), Cai Yuanpei (蔡元培 \nazwisko{Cài Yuánpéi}, 1868--1940).
+Another period of relative popularity followed the ``reform and opening up'' (改革開放 \pinyin{gǎigé kāifàng}) program of Deng Xiaoping (鄧小平 \nazwisko{Dèng Xiǎopíng}, 1904--1997), and occurred roughly between 1981--2005.
 Liu admits that although Esperantists in China constitute an important part of the global Esperanto movement, the number of Esperanto speakers in this country is vastly exaggerated.
 At present, there is no nationwide organization for Esperantists in China, only a handful of local Esperantist clubs.
 Liu estimates the number of proficient speakers in the whole country to be around 1000.
@@ -100,7 +135,7 @@ and China Radio International\footnote{\url{http://esperanto.cri.cn/}, retrieved
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
 On the other hand, it is by far the most successful constructed language in history.
-Sikosek (2003) estimates the number of speakers of Esperanto at a maximum of 40,000-50,000.
+Sikosek (2003) estimates the number of speakers of Esperanto at a maximum of 40,000--50,000.
 
 Esperanto is actively spoken not only by L2 speakers, but quite often also by their bilingual or multilingual offspring.
 In Esperanto, native speakers of Esperanto are referred to as \textit{denaskuloj} (from \textit{denask-} `from birth' and \textit{ulo} `person, individual') or \textit{denaskaj Esperantistoj} (`Esperantist from birth')
@@ -113,7 +148,9 @@ As of September 12th, 2019, the Esperanto edition of Wikipedia, the free online 
 The 105th World Esperanto Congress (Esperanto: \textit{105-a Universala Kongreso de Esperanto}) is scheduled to take place from 1st to the 8th of August, 2020, in Montreal, Quebec, Canada\footnote{\url{https://esperanto2020.ca/en/world-esperanto-congress/}, retrieved March 23th, 2020.}.
 The 104th World Esperanto Congress took place in Lahti, Finland, and attracted 917 participants from 57 countries (Universala Esperanto-Asocio 2019).
 
-Arika Okrent, the author of a book on the topic of constructed languages, is generally critical of most of these projects.
+% TODO: add the quote from 'The bridge of Words' about a silent evening
+
+Arika Okrent, the author of a book on the topic of constructed languages, is generally critical of most of the constructed language projects she has researched.
 Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease of communication that the speakers of Esperanto managed to attain:
 
 \longquote{%
@@ -122,22 +159,19 @@ Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease
   Arika Okrent: At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], ``Hello. How are you? I am fine.'' But they were speaking fluently, and with a little bit of study I could understand what was going on. % There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.%
 }
 
-\section{Esperanto as a language of translation} \label{esperanto_translations}
-Translations have been an important part of the Esperanto movement ever from its early beginnings.
-Zamenhof's first translation into Esperanto was \textit{The Battle of Life: A Love Story} by Charles Dickens (Esperanto: \textit{La Batalo de l' Vivo}), which had not been published in book form until 1910.
-His next translation was Shakespeare's \textit{Hamlet}, published in Esperanto under the title \textit{Hamleto. Reĝido de Danujo} (`Hamlet. Prince of Denmark').
-Both translations were indirect translations from German-language editions
-(Kökény and Bleier 1933: 1054).
+\section{Summary}
+From all of the above, we can conclude that although the language has definitely not made its way into the mainstream, it is far from dead, and has a substantial following around the world.
+If one manages to find someone who actually speaks Esperanto, it is perfectly possible to converse fluently, regardless of one's own cultural and linguistic background.
+This is in stark contrast to English, the language most commonly used as a lingua franca as of this writing.
+The English language is far from simple, and the overall level of English education varies by country.
+In Scandinavia, all children have to take compulsory English classes from early childhood, and all television programs in English are subtitled rather than dubbed.
+Meanwhile, in other parts of the world there is either no English education at all, or the language education is perfunctory or test-oriented.
+Theoretically, a 19-year-old from Japan or China may have studied English for exactly the same period of time as his peers in the Netherlands or Norway.
+In practice, any Westerner who has ever visited East Asia knows how big and impenetrable the language barrier is between East Asia and the West.
+It seems as if the twelve years that every young person in East Asia has to spend learning English is time forever wasted.
+Any Asian person who struggles with English, and any Westerner who struggles to get around using just English in Asia, could greatly benefit from a simple and politically neutral language such as Esperanto.
 
-% The first published book written directly in Esperanto was Zamenhof's \textit{Foundation of Esperanto}.
-According to Benczik (1979), Esperanto is regarded by most of its users as a language best suited for translation.
-Firstly, unlike in the case of national languages, where native speakers of the language have an obvious advantage over L2 speakers, Esperanto is from the outset designed to be used as an L2 language.
-This implies that anyone can translate from his or her own native language into Esperanto, which minimizes the risk of any misinterpretation of the source text.
-Secondly, Esperanto is very flexible; unlike national languages, its expressions are not constrained by a centuries-long language history.
-Lastly, it is theoretically possible that Esperanto could become popular in the whole world, it is therefore sufficient to translate a work into Esperanto, a language that can by understood by a person of any nationality.
-Indirect translation of texts originally written in another national language into another national language is particularly common in Asia.
-
-In the case of ethnic languages, a substantial part, if not the majority, of all translated texts are not meant for publication, but are translations of letters, articles, documents or other texts for internal use by organizations or governments.
-However, due to the fact that no country uses Esperanto as its official language, there is no need for such translations, and the vast majority of translations from ethnic languages or vice versa are intended for publishing in print.
-Benczik's article (1979) predated the invention of the World Wide Web by more than a decade.
-Nowadays, it is conceivable that most translations from or into Esperanto end up being published on websites or as e-books.
+% This chapter described the constructed language Esperanto.
+% It started with a brief biography of its creator, Ludwik Zamenhof, and the creation of Esperanto.
+% It was followed with a description of the early developments of the Esperanto movement and the earliest translation of works from ethnic languages into Esperanto.
+% The remaining part of the chapter deals with the state of the community of Esperantists today, both in China and in the rest of the world.
