--- a/introduction.tex
+++ b/introduction.tex
@@ -28,11 +28,11 @@ According to the article, the phenomenon of translation from Esperanto into nati
 The article is a mere three pages long and is by no means an exhaustive analysis of the topic, therefore the author considers writing a dissertation on the use of Esperanto as a bridge language to be a justifiable effort.
 
 Ausloos (2008) performed a computer analysis of two English texts and their respective translations into Esperanto.
-His research is similar in that it compares works in a natural language to their Esperanto translations, it does not, however, deal with the use of Esperanto as a bridge language or with indirect translation.
-His methodology differs from the research proposed in this text in that it is performed automatically by a computer program rather than a human.
+Although his research compares certain works in a natural language to their Esperanto translations, it does not deal with the use of Esperanto as a bridge language or with indirect translation.
+His methodology differs from the research proposed in this text in that it is performed automatically by a computer program rather than a human, and does not involve reading the texts or analyzing their contents.
 
 \section{Research method and expected outcome}
-
+The proposed research involves a thorough analysis of three versions of a single text, in three different languages.
 A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could help determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
 
 The author deems it safe to assume that the translator of the Esperanto edition, Ludwik Lejzer Zamenhof, possessed all means of creating a complete and faithful translation: having grown up in an area where Polish was the language of intelligentsia, he had a good command of the Polish language, a good understanding of the Polish culture, and decades of experience in writing.
@@ -45,10 +45,10 @@ His work is discussed in more detail in section \ref{esperanto_translations}.
 
 On the other hand, Chinese, especially in its written variant (書面語 \pinyin{shūmiànyǔ} `book language'), relies on entirely different patterns than European languages.
 This has to do with the history and development of the Chinese language.
-Up till the 20th century, Chinese was a diglossic language.
-No legal standard of the spoken language existed and numerous spoken varieties were used throughout China.
+Up till the 20th century, Chinese was a highly diglossic language.
+No legal standard of the spoken language existed; instead, numerous spoken varieties were used throughout China.
 These local varieties are referred to in Chinese as \textit{fangyan} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English as ``dialect.''
-By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the term ``topolect'' shall be used as an equivalent of the Chinese term \textit{fangyan}, as proposed by Mair (1991).
+By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the Chinese term \textit{fangyan} will be rendered in English as ``topolect,'' as proposed by Mair (1991).
 
 Despite the vast differences between topolects, the writing system has largely been uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
 In Chinese, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English as ``classical Chinese'' or ``literary Chinese.''
@@ -66,6 +66,6 @@ Should the Esperanto translation prove to be a faithful rendition of the Polish 
 In the first chapter of the thesis, the subject of research is introduced.
 The second chapter presents the auxilliary language Esperanto, describing its origin, development, and current state.
 The third chapter provides the presentation of the novel \textit{Marta} by Eliza Orzeszkowa and its historical and cultural background.
-In the fourth chapter, Zamenhof's Esperanto translation of the novel will be compared with the Polish original, to determine whether any meaning had been lost or distored in the translation process.
-The fifth chapter will provide a comparative analysis of the Chinese translation by Zhong Xianmin and its Esperanto source text to see how the translator dealt with fragments where equivalence could not be easily achieved.
-The sixth chapter will evaluate whether in the case of the novel \textit{Marta} Esperanto was suitable as a bridge language.
+In the fourth chapter, Zamenhof's Esperanto translation of the novel will be compared with the Polish original, to determine whether any meaning had been lost or distorted in the translation process.
+The fifth chapter will provide a comparative analysis of the Chinese translation by Zhong Xianmin and its Esperanto source text to see how the translator dealt with the fragments where equivalence could not be easily achieved.
+The sixth chapter will contain a conclusion, discussing whether in the case of the novel \textit{Marta} Esperanto was a suitable bridge language, and whether it would be as good a choice if one were to translate a work of fiction nowadays.
