Add outline to chapter three

--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -1,4 +1,7 @@
 \chapter{Presentation of the novel \textit{Marta}}
+This chapter describes the novel \textit{Marta} by Eliza Orzeszkowa.
+It contains a brief presentation of the historical background: the Polish people's struggle for independence, the literary trend called ``Warsaw Positivism,'' and the life story of the author.
+Finally, the plot of the novel is outlined.
 
 \section{Historical background of the novel}
 
@@ -11,7 +14,7 @@ After the failure of the 1863 January Uprising against the Russian Empire, the P
 The fallen uprising and the Polish question had also been an important topic for European socialists
 (Stekloff 1928).
 
-The end of the January uprising is considered to be the beginning of a literary genre known as the ``Warsaw Positivism'' (French: \textit{positivisme varsovien}).
+The end of the January uprising is considered to be the beginning of a literary genre known as the ``Warsaw Positivism'' (French: \textit{positivisme varsovien}, Polish: \textit{pozytywizm warszawski}).
 This philosophy emphasized the importance of ``organic work'' (Polish: \textit{praca organiczna}), that is, active development of education and economy.
 % It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions.
 The key topics in Polish Positivist literature included the fight for independence, the emancipation of serfs and women, promoting science, medicine and public hygiene, and the assimilation of Jews into the Polish society.
