Add index and compiler script

--- a/thesis_with_index.tex
+++ b/thesis_with_index.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,12pt]{book}
 \input{_preamble}
+\usepackage{makeidx}
+\makeindex
 \begin{document}
 \frenchspacing
 \input{titlepage_proposal}
