Proofread most of chapter three

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -48,6 +48,6 @@
 {\normalfont\huge}{{\thechapter}}{10pt}{}
 \titlespacing{\chapter}{0pt}{0.5em}{0.5em}
 
-\hyphenation{Mil-kow-szczy-zna Biały-stok Меж-ду-на-род-ный}
+\hyphenation{Mil-kow-szczy-zna Biały-stok Меж-ду-на-род-ный war-szaw-ski}
 
 \newcommand{\noteonrussian}{\footnote{All Russian terms in the thesis are rendered in original Cyryllic script and transliterated according to the BGN/PCGN romanization system for Russian. Unless noted otherwise, all terms are listed in their pre-reform spelling, the standard form before the October Revolution of 1917.}}
